Fix: prevent header overlapping products-section; add top padding

--- a/jones/src/sass/layout/_products-section.scss
+++ b/jones/src/sass/layout/_products-section.scss
@@ -2,6 +2,8 @@
 
 .products-section {
   width: 100%;
+  /* Ensure content below a sticky header is reachable/clickable */
+  padding-top: calc(var(--header-height) + 1rem);
   background-color: #fff;
 
   &__container {
